--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,9 +17,9 @@ install:
 build: off
 test_script:
 - cmd: >-
+    dir
+
     go list ./... | xargs -L1 golint
 
     for /f "" %%G in ('go list git.cm/naiba/go-readability/...') do ( go test %%G & IF ERRORLEVEL == 1 EXIT 1)
-
-    go test git.cm/naiba/go-readability
 deploy: off
