--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@ before_install:
 script:
   - go list ./... | xargs -L1 golint
   - go test -v -race -cover ./...
+notifications:
+  email: 
+    on_success: never
+    on_failure: always
